--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
+---
 sudo: required
 dist: trusty
 language: python
 python:
   - "3.6"
 before_install:
+  - sudo apt-get -qq update
   - pip install pipenv
 install: pipenv install --deploy --system
 script: pytest tests
