--- a/{{cookiecutter.role_name}}/meta/main.yml
+++ b/{{cookiecutter.role_name}}/meta/main.yml
@@ -3,6 +3,7 @@ galaxy_info:
   author: {{ cookiecutter.author }}
   description: {{ cookiecutter.description }}
   company: {{ cookiecutter.company }}
+  version: 0.0.0
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
